After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780812 - tests: Fix various warnings / annoyances
tests: Fix various warnings / annoyances
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
Git master
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-01 16:16 UTC by Christoph Reiter (lazka)
Modified: 2017-04-01 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pygi-source: clear exceptions in finalize handler (849 bytes, patch)
2017-04-01 16:18 UTC, Christoph Reiter (lazka)
committed Details | Review
tests: avoid deprecation warnings for assertRegexpMatches/assertRaisesRegexp (1.06 KB, patch)
2017-04-01 16:18 UTC, Christoph Reiter (lazka)
committed Details | Review
tests: silence some glib deprecation warnings (2.30 KB, patch)
2017-04-01 16:19 UTC, Christoph Reiter (lazka)
committed Details | Review
tests: avoid mapping a GtkWindow (940 bytes, patch)
2017-04-01 16:19 UTC, Christoph Reiter (lazka)
committed Details | Review

Description Christoph Reiter (lazka) 2017-04-01 16:16:32 UTC
The Python 3 test run started to become noisy with warnings. This cleans it up.
Comment 1 Christoph Reiter (lazka) 2017-04-01 16:18:26 UTC
Created attachment 349117 [details] [review]
pygi-source: clear exceptions in finalize handler
Comment 2 Christoph Reiter (lazka) 2017-04-01 16:18:46 UTC
Created attachment 349118 [details] [review]
tests: avoid deprecation warnings for  assertRegexpMatches/assertRaisesRegexp
Comment 3 Christoph Reiter (lazka) 2017-04-01 16:19:07 UTC
Created attachment 349119 [details] [review]
tests: silence some glib deprecation warnings
Comment 4 Christoph Reiter (lazka) 2017-04-01 16:19:26 UTC
Created attachment 349120 [details] [review]
tests: avoid mapping a GtkWindow