pygi-source: clear exceptions in finalize handler

This was executed in the context of Source.__del__ and while Python
ignores errors there it started to warn with Python 3.

This fixes the warnings visible when running test_source under Python 3.

https://bugzilla.gnome.org/show_bug.cgi?id=780812